overflow bugfix

--- a/biostar/static/biostar.base.less
+++ b/biostar/static/biostar.base.less
@@ -464,9 +464,9 @@ ul.flat {
 
   .entry {
 
-    overflow: scroll;
-    overflow: hidden;
-    padding: 0px 10px 0px 5px;
+    overflow: auto;
+
+    padding: 10px 10px 5px 10px;
     margin-top: 0.3em;
     color: #666666;
     background-color: #efefef;
